--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,7 +125,7 @@
     <EditText
         android:id="@+id/editPassword2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android_layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:autofillHints="password"
         android:inputType="textPassword" />
